// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correct value should be verified 1`] = `
Array [
  Object {
    "id": "EMAIL",
    "kind": "email",
    "properties": Object {},
    "title": "number.test",
    "value": "email@example.com",
  },
]
`;

exports[`undefined value should be verified if not required 1`] = `
Array [
  Object {
    "id": "EMAIL",
    "kind": "email",
    "properties": Object {},
    "title": "number.test",
    "value": "",
  },
]
`;
